# masterRepo

./: .gitignore  CMakeLists.txt  GE Description.md  README.md
app/: CMakeLists.txt
app/AlgorithmTuner/: CMakeLists.txt  algorithm_data_proc.cpp  algorithm_data_proc.hpp  algorithm_interface.cpp  algorithm_interface.hpp  algorithm_tuner.cpp  algorithm_tuner.hpp  algorithm_tuner.ui  ba_interface.cpp  ba_interface.hpp  ga_interface.cpp  ga_interface.hpp  genetic_evaluator_oc_interface.cpp  genetic_evaluator_oc_interface.hpp  hv_interfaces.cpp  hv_interfaces.hpp  main.cpp
app/bo_tuning/: CMakeLists.txt  bo_tuning.cpp
app/dataset_viewer/: CMakeLists.txt  dataset_viewer.cpp  dataset_viewer.hpp  dataset_viewer.ui  main.cpp  manual_registration.cpp  manual_registration.h  manual_registration.ui
app/manual_registration/: CMakeLists.txt  main.cpp  manual_registration.cpp  manual_registration.h
app/src/: main.cpp
app/viewpoint_point_cloud/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Baseline/: CMakeLists.txt
lib/Baseline/include/baseline/: baseline.hpp
lib/Baseline/src/: baseline.cpp
lib/ContextProcessing/: CMakeLists.txt
lib/Dataset/: CMakeLists.txt
lib/Dataset/include/dataset/: DataPoint.hpp  Dataset.hpp  DatasetObject.hpp  ScapeDataset.hpp  ScapeDatasetObject.hpp  ScapeObject.hpp  ScapeRecognitionObject.hpp  SileaneDataset.hpp  SileaneDatasetObject.hpp  SileaneDepthToPCD.hpp  SileaneObject.hpp  pose_noise.hpp  transform_utility.hpp  typedefinitions.hpp  vizualization.hpp
lib/Dataset/include/dataset/scape/: ScapeDataPoint.hpp  ScapeDataset.hpp  ScapeDatasetObject.hpp  ScapeZone.hpp
lib/Dataset/include/dataset/sileane/: SileaneCameraParams.hpp  SileaneDataset.hpp  SileaneDatasetObject.hpp
lib/Dataset/src/: DataPoint.cpp  Dataset.cpp  DatasetObject.cpp  pose_noise.cpp  transform_utility.cpp
lib/Dataset/src/scape/: ScapeDataPoint.cpp  ScapeDataset.cpp  ScapeDatasetObject.cpp  ScapeZone.cpp
lib/Dataset/src/sileane/: SileaneCameraParams.cpp  SileaneDataset.cpp  SileaneDatasetObject.cpp
lib/GA/: CMakeLists.txt
lib/GA/include/ga/: GeneticEvaluator.hpp  GeneticEvaluatorObjectCandidates.hpp  ga.hpp  ga_functions.hpp
lib/GA/include/ga/collision/: collision_checking.hpp
lib/GA/include/ga/genetic_evaluator/: GeneticEvaluator.hpp  GeneticEvaluatorObjectCandidates.hpp
lib/GA/include/ga/point_cloud_processing/: point_cloud_processing.hpp  point_cloud_renderer.hpp
lib/GA/include/ga/utility/: logging.hpp  point_cloud_processing.hpp  pose_noise.hpp  typedefinitions.hpp  visualization.hpp  vizualization.hpp
lib/GA/include/ga/visualization/: point_cloud_group_visualizer.hpp  point_cloud_renderer.hpp  visualization.hpp
lib/GA/src/: GeneticEvaluator.cpp  GeneticEvaluatorObjectCandidates.cpp  collision_checking.cpp  ga.cpp  point_cloud_processing.cpp  typedefinitions.cpp  visualization.cpp
lib/GA/src/collision/: collision_checking.cpp
lib/GA/src/genetic_evalutator/: GeneticEvaluator.cpp  GeneticEvaluatorObjectCandidates.cpp
lib/GA/src/point_cloud_processing/: point_cloud_processing.cpp  point_cloud_renderer.cpp
lib/GA/src/visualization/: point_cloud_group_visualizer.cpp  point_cloud_renderer.cpp  visualization.cpp
lib/HypothesisVerificaiton/: CMakeLists.txt
lib/HypothesisVerificaiton/include/hypothesis_verification/: typedefinitions.hpp
lib/HypothesisVerificaiton/include/hypothesis_verification/evaluator/: GeneticEvaluator.hpp  GeneticEvaluatorInlierCollision.hpp  GeneticEvaluatorInlierCollisionVariants.hpp  GeneticEvaluatorObjectCandidates.hpp  collision_checking.hpp  point_cloud_renderer.hpp  simple_visibility_function.hpp
lib/HypothesisVerificaiton/include/hypothesis_verification/evaluator/functionality/: Collision.hpp  IntersectingPoints.hpp  VisibleInlier.hpp
lib/HypothesisVerificaiton/include/hypothesis_verification/hv_alg/: bf.hpp  bf_gen.hpp  ga.hpp  ga_functions.hpp  hv_result.hpp  sequential_min_cost.hpp  sequential_prior.hpp
lib/HypothesisVerificaiton/include/hypothesis_verification/visualization/: point_cloud_group_visualizer.hpp
lib/HypothesisVerificaiton/src/: typedefinitions.cpp
lib/HypothesisVerificaiton/src/evaluator/: GeneticEvaluator.cpp  GeneticEvaluatorInlierCollision.cpp  GeneticEvaluatorInlierCollisionVariants.cpp  GeneticEvaluatorObjectCandidates.cpp  collision_checking.cpp  point_cloud_renderer.cpp  simple_visibility_function.cpp
lib/HypothesisVerificaiton/src/evaluator/functionality/: Collision.cpp  IntersectingPoints.cpp  VisibleInlier.cpp
lib/HypothesisVerificaiton/src/hv_alg/: bf.cpp  bf_gen.cpp  ga.cpp  ga_functions.cpp  sequential_min_cost.cpp  sequential_prior.cpp
lib/HypothesisVerificaiton/src/visualization/: point_cloud_group_visualizer.cpp
python/: object_candidates.py  sileane.py
scripts/: 5fold_individual.txt  algorithm_tuner_overview.ipynb  cost_score_correlation.ipynb  data_processing_functions.py  dataset_logistic_regression.ipynb  dataset_stats.ipynb  ga.py  ga_convergence.ipynb  ga_data_vis.py  ge_coll_center_testing.ipynb  ge_growth_rate_testing.ipynb  ge_inlier_thresh_testing.ipynb  gt_collision_data.ipynb  mesh_sampling.sh  object_candidates.py  scape_mesh_sampling.sh  score_threshold_bl.ipynb  sigmoid_plot.ipynb  sileane.py  threshold_test.ipynb  (+3 more)
test/: CMakeLists.txt
test/ContextProcessingTests/: CMakeLists.txt  ViewPointCloudTest.cpp  VisualizerTest.cpp
test/dataset/: CMakeLists.txt  analysis_of_tp_and_fp.cpp  analysis_of_tp_and_fp.csv  analysis_of_tp_and_fp_10.000000_5.000000.csv  analysis_of_tp_and_fp_5.000000_5.000000.csv  analysis_of_tp_and_fp_wo_nms.csv  dataset_statistics.cpp  gt_coll_data.csv  gt_collision_test.cpp  scape_data_set_test.cpp  sileane_data_set_test.cpp  timetest.cpp
test/fcl/: CMakeLists.txt  fcl_test.cpp
test/ga_and_baseline/: CMakeLists.txt  baseline.cpp  baseline_comp.cpp  baseline_ga_diff.cpp  comp.cpp  ga_test_scape_data.cpp  optimization_algorithm_test.cpp
test/ga_and_baseline/utility/: test_util.cpp  test_util.hpp
test/src/: baseline.cpp  baseline_ga_diff.cpp  fcl_test.cpp  ga_test_scape_data.cpp  scape_data_set_test.cpp  sileane_data_set_test.cpp
(+13 files in other folders)
